# django-blueprint

./: README.md  pyproject.toml
blueprint/: __init__.py  fields.py  models.py  utils.py
blueprint/locale/nl/LC_MESSAGES/: django.po
blueprint/media_library/: __init__.py  apps.py  fields.py  models.py
