[project]
name = "django-blueprint"
version = "1.0.0-beta.1"
description = "Blueprint is a modular CMS for Django."
authors = [
    {name = "Leon van der Grient",email = "leon@devtastic.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich"
]

[tool.poetry]
packages = [{include = "headless"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
Django= "^6.0.2"
djangorestframework= "^3.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
