[project]
name = "django-blueprint"
version = "1.0.0-beta.1"
description = "Blueprint is a modular CMS for Django."
authors = [
    {name = "Leon van der Grient",email = "leon@devtastic.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema (>=4.26.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "blueprint"}]

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
Django= "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
